Init page pension

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,9 @@
       <div [class]="getLinkClass('/nos-pensionnaires')" routerLink="/nos-pensionnaires">Nos pensionnaires</div>
     </div>
     <div class="col">
+      <div [class]="getLinkClass('/pension-pour-chats')" routerLink="/pension-pour-chats">Pension pour chats</div>
+    </div>
+    <div class="col">
       <div [class]="getLinkClass('/reservation')" routerLink="/reservation">Réservation</div>
     </div>
     <div class="col">
