page temp pension

--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -1,1 +1,7 @@
-pâge pension
+<div class="color-peche-foncee text-center mt-3">
+    Cette rubrique du site est en cours de rédaction.
+    <div class="color-turquoise-foncee"> Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement
+            conçu pour les animaux</b>, par une personne <b>qualifiée</b> (ACACED), et où il aura tout un tas
+        de compagnie, vous pouvez nous contacter directement
+        pour que l'on vous transmette toutes les informations concernant la pension de Séréni'chat.</div>
+</div>
