--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,16 +2,13 @@
 <div class="text-big">
   <div class="color-turquoise-foncee text-center mt-5">
     <div>
-      Pour toute question ou suggestion, laissez nous un message au
+      Pour la pension pour chats ou toute demande d'informations, laissez nous un message au
       <span class="color-peche-foncee text-center"> 06.29.41.01.36</span>
     </div>
   </div>
   <div class="color-turquoise-foncee text-center">
     <div style="overflow-wrap: break-word;">ou envoyez nous un mail à l'adresse
-      <span class="text-center"><a href="mailto:contact.serenichat@gmail.com">contact.serenichat@gmail.com</a></span>
+      <span class="text-center"><a href="mailto:contact.serenichat@gmail.com">contact.serenichat@gmail.com</a></span> .
     </div>
-  </div>
-  <div class="color-turquoise-foncee text-center mt-4">
-    <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">Réservation !</span></div>
   </div>
 </div>
