--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>Vous pouvez nous amener...
+          <div>Vous pouvez nous apporter...
           </div>
           <div class="text-left">
             <div>- pour les <b>chats</b> : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
