--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -1,7 +1,103 @@
-<div class="color-peche-foncee text-center mt-3">
-    Cette rubrique du site est en cours de rédaction.
-    <div class="color-turquoise-foncee"> Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement
-            conçu pour les animaux</b>, par une personne <b>qualifiée</b> (ACACED), et où il aura tout un tas
-        de compagnie, vous pouvez nous contacter directement
-        pour que l'on vous transmette toutes les informations concernant la pension de Séréni'chat.</div>
-</div>
+
+<div class="color-turquoise-tres-foncee mt-3">
+    
+    <div class="color-turquoise-foncee">
+        <div>La pension Séréni'chat est un endroit totalement conçu pour les animaux. La salle se compose d'un grand espace 
+        de repos et de jeu, d'un arbre à chats taille réelle et d'une mezzanine-coin litières.
+        <div>Séréni'chat est en même temps une activité de médiation animale : cela implique que des personnes handicapées 
+        viennent profiter du contact avec l'animal et en apprendre un peu plus sur les animaux domestiques.</div> 
+        <div>AUCUN contact n'est obligatoire. Nos chats permanents ou en famille d'accueil sont habitués et peuvent gérer toute 
+        l'attention. Si le chat en pension n'a pas envie d'être approché ou touché, nous respectons ce choix à 100%.</div>
+        <div>Si, à l'inverse, le chat en pension est en demande d'attention, il en recevra autant qu'il le souhaite.</div>
+        <div>TOUT contact est étroitement surveillé.</div>
+        <div>Il y a au maximum 3 visiteurs par séance, ce sont le plus souvent des séances individuelles.</div>
+        </div>
+    </div>    
+
+        <div class="color-peche-foncee mt-5 text-center">
+         <div>REGLEMENT A LIRE IMPERATIVEMENT</div>
+         <div>(C'est un peu laborieux, mais très important !)</div> 
+         <div>La couleur du texte est plus foncée pour votre confort de lecture.</div>
+        </div>
+
+        <div class="color-peche-foncee mt-5">
+        1. SANTÉ DES CHATS :</div>
+
+        <div class="mt-3">(De notre côté) Les chats accueillis par Séréni'chat -permanents ou en famille d'accueil- sont 
+        à jour dans leurs vaccins, antiparasités et stérilisés s'ils en ont l'âge (au moins les mâles). Petite exception : 
+        quand Séréni'chat accueille des chatons trop petits pour être vaccinés, ce premier point ne peut être respecté. 
+        Ils sont cependant testés FIV et FelV, et sont vaccinés pendant leur séjour chez nous (une fois qu'ils atteignent 
+        le poids nécessaire à cette vaccination).</div>
+        
+        <div class="mt-2 mb-2">(De votre côté) Séréni'chat recevant des enfants et accueillant de nombreux animaux, nous ne pouvons pas 
+        avoir en pension des chats atteints de maladies contagieuses pour l'homme, pour les autres chats et pour les 
+        lapins.</div>
+
+        <div>Il est donc devenu obligatoire de présenter un certificat vétérinaire attestant la non-contagiosité du 
+        chat daté de moins de 2 semaines (nous sommes conscients que cette condition est contraignante. Cependant 
+        cet examen étant très court, de nombreux vétérinaires acceptent de vous placer entre deux rendez-vous). 
+        <div>Il est impératif de nous prévenir si le chat a pu être exposé à une maladie contagieuse 
+        entre l'examen vétérinire et la pension.</div>
+        <div>Les chats malades (attestés non contagieux) sont admis à condition d'être munis d’une ordonnance du traitement 
+        à suivre ainsi que du traitement pour la durée du séjour.</div>
+
+        <div class="mt-2 mb-2">Le CARNET DE SANTE et la carte de tatouage ou puce électronique du chat sera exigé à l'entrée de l'animal et conservé pendant son séjour.
+        Celui-ci devra être à jour -d'un mois avant admission- des vaccins contre le Typhus, le Coryza et la Leucose.
+        Le propriétaire s’engage à signaler préalablement les problèmes de santé et les antécédents qui pourraient 
+        affecter le comportement de l'animal durant son séjour.</div>
+        
+        <div>Les chats mâles de plus de six mois doivent être impérativement castrés.</div>
+        
+        <div class="mt-2 mb-2">Les chats âgés sont admis seulement s’ils font l’objet d’un suivi vétérinaire régulier.
+        </div>
+
+        <div>Les chats doivent à leur arrivée être à jour dans leurs antiparasitaires : antipuces-tiques, vermifuge...
+        </div>
+
+        <div class="mt-2 mb-2">Nous informons imédiatement les propriétaires en cas de souci de santé lors du séjour du chat chez Séréni'chat. 
+        Cependant nous nous réservons le droit de privilégier l'avis vétérinaire plutôt que l'avis du propriétaire si 
+        ce dernier avis est jugé inadapté pour la bonne santé de l'animal.</div>
+
+        <div> Des accidents peuvent malheureusement survenir en pension comme au domicile du propriétaire, qui n'ont aucun 
+        lien avec les soins prodigués à l'animal... Si le chat nécessite une intervention vétérinaire imprévisible lors 
+        de son séjour, nous vous demanderons de prendre en charge les frais vétérinaires, sauf en cas de réclamation 
+        justifiée par une attestation vétérinaire établissant notre responsabilité.</div> 
+    
+        <div class="color-peche-foncee mt-5">2. RESPONSABILITÉ :</div>
+        
+        <div class="mt-3 mb-2">Même si cela est très peu probable au vue de nos conditions d'admission, les frais relatifs aux soins sont 
+        pris en charge par la pension en cas de maladie contractée pendant le séjour du chat -sous réserve que 
+        l'examen vétérinaire implique sa responsabilité. Sont donc exclues les affections dont les délais d’incubation 
+        prouvent que la maladie n'a pas été contractée lors du séjour ou les eczémas chroniques par exemple.</div>
+
+        <div>Nous sommes responsables de l'animal et des dégâts éventuels qu'il pourrait causer pendant son séjour.
+        Pour garantir la sécurité de tous nos petits protégés, nous vous faisons cependant confiance pour certifier 
+        qu'il n'a pas de souci particulier pour s'entendre avec les humains, les autres chats et les lapins.</div>
+        
+        <div class="color-peche-foncee mt-5">3. GARANTIE :</div>
+        
+        <div class="mt-3">Nous nous engageons à prodiguer tous les soins nécessaires au bien être du chat pendant son séjour.</div>
+        <div>La responsable, Noémie, possède le Certificat de Capacité Chiens, Chats et Autres animaux domestiques (ACACED).</div>
+        <div class="mb-2">La nourriture est de qualité supérieure et adaptée à l'animal, les litières sont changées et nettoyées tous les jours, 
+        les traitements sont administrés selon les recommandations du vétérinaire, et tous les éventuels contacts avec les 
+        visiteurs de Séréni'chat sont étroitement surveillés.</div> 
+
+        <div class>Nous rappelons qu'aucune interaction n'est obligatoire pour l'animal. S'il veut rester tranquille 
+        tout le long de son séjour, ce choix sera évidemment respecté !</div>
+
+        <div class="mt-2">Le local est sécurisé par un système de surveillance, d'alarmes intrusion et incendie automatiquement transmises 
+        aux autorités, les fenêtres ne sont pas accessibles et nous avons construit un SAS de sécurité qui empêche nos boules 
+        de poils d'aller faire un tour dehors lorsque nous ouvrons la porte d'entrée.  
+        
+        <div class="color-peche-foncee mt-5">4. TARIFICATION :</div>
+        
+        <div class="mt-3">La journée d'entrée est intégralement facturée.</div>
+        <div>La journée de sortie n'est pas facturée si l'animal est repris avant 14 h.</div>
+        <div>La pension se règle à l'arrivée de l'animal.</div>
+        <div>Il est conseillé de nous contacter pour réserver une pension le plus à l'avance possible.</div>
+        
+        <div class="color-peche-foncee mt-5 text-center">LA MISE EN PENSION IMPLIQUE L’ ACCEPTATION  SANS RÉSERVE DU PRÉSENT RÈGLEMENT
+            <div class="mt-5">Si vous avez tout lu, bravo et merci !</div>
+            <div>Vous pouvez maintenant nous contacter pour réserver une pension.</div>
+        </div>
+</div>    
