--- a/src/assets/style/_colors.scss
+++ b/src/assets/style/_colors.scss
@@ -4,6 +4,7 @@ $peche-foncee: #e65f0e;
 
 $turquoise: rgba(178, 222, 214, 1);
 $turquoise-foncee: #409C8C;
+$turquoise-tres-foncee : #045c5c;
 
 $marron: #4D2005;
 
