--- a/src/assets/style/_typo.scss
+++ b/src/assets/style/_typo.scss
@@ -31,6 +31,10 @@ body {
   color: $turquoise-foncee;
 }
 
+.color-turquoise-tres-foncee {
+  color: $turquoise-tres-foncee;
+}
+
 .text-big {
   font-size: 1.5rem;
 }
