tarifs pension et masques

--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -2,16 +2,23 @@
 <div class="color-turquoise-tres-foncee mt-3">
     
     <div class="color-turquoise-foncee">
-        <div>La pension Séréni'chat est un endroit totalement conçu pour les animaux. La salle se compose d'un grand espace 
-        de repos et de jeu, d'un arbre à chats taille réelle et d'une mezzanine-coin litières.
-        <div>Séréni'chat est en même temps une activité de médiation animale : cela implique que des personnes handicapées 
-        viennent profiter du contact avec l'animal et en apprendre un peu plus sur les animaux domestiques.</div> 
-        <div>AUCUN contact n'est obligatoire. Nos chats permanents ou en famille d'accueil sont habitués et peuvent gérer toute 
-        l'attention. Si le chat en pension n'a pas envie d'être approché ou touché, nous respectons ce choix à 100%.</div>
-        <div>Si, à l'inverse, le chat en pension est en demande d'attention, il en recevra autant qu'il le souhaite.</div>
-        <div>TOUT contact est étroitement surveillé.</div>
-        <div>Il y a au maximum 3 visiteurs par séance, ce sont le plus souvent des séances individuelles.</div>
-        </div>
+        <div>La <b>pension Séréni'chat</b> est un endroit <b>totalement conçu pour les animaux</b>.</div>
+        <div>Nous accueillons des <b>chats permanents</b>, des <b>chats en famille d'accueil</b> et des <b>chats en 
+            pension</b>.</div>
+        <div>La salle se compose d'un <b>grand espace</b> de repos et de jeu, d'un <b>arbre à chats taille réelle</b> 
+        et d'une <b>mezzanine/coin litières</b>.</div>
+        <div>Séréni'chat est en même temps une activité de <b>médiation animale</b> : cela implique que des personnes handicapées 
+        viennent profiter du <b>contact avec l'animal</b> et en apprendre un peu plus sur les <b>animaux domestiques</b>.</div> 
+        <div><b>AUCUN contact n'est obligatoire</b>. Nos chats permanents ou en famille d'accueil sont habitués et peuvent gérer 
+            toute l'attention. Si le <b>chat en pension</b> n'a pas envie d'être approché ou touché, nous respectons ce choix à 
+            <b>100%</b>.</div>
+        <div>Si, à l'inverse, le chat en pension est en <b>demande d'attention</b>, il en recevra autant qu'il le souhaite.</div>
+        <div><b>TOUT contact</b> est étroitement surveillé.</div>
+        <div>Il y a au maximum 3 visiteurs par séance, nous avons plus souvent des <b>séances individuelles</b>.</div>
+        <div class= "mt-3 text-center"><b>Nos tarifs : 15 euros par jour de pension</b>.</div> 
+        <div>Si vous nous confiez plusieurs chats, le tarif sera <b>dégressif</b> : 
+            si 2 chats -> 14 euros par jour et par chat; si 3 chats -> 13 euros par jour et par chat...</div>
+        
     </div>    
 
         <div class="color-peche-foncee mt-5 text-center">
@@ -28,6 +35,8 @@
         quand Séréni'chat accueille des chatons trop petits pour être vaccinés, ce premier point ne peut être respecté. 
         Ils sont cependant testés FIV et FelV, et sont vaccinés pendant leur séjour chez nous (une fois qu'ils atteignent 
         le poids nécessaire à cette vaccination).</div>
+        <div class= "mt-2">Les visiteurs de Séréni'chat sont masqués, retirent leurs chaussures à l'entrée et se désinfectent 
+            les mains avant d'entrer dans la pièce des animaux.</div>
         
         <div class="mt-2 mb-2">(De votre côté) Séréni'chat recevant des enfants et accueillant de nombreux animaux, nous ne pouvons pas 
         avoir en pension des chats atteints de maladies contagieuses pour l'homme, pour les autres chats et pour les 
