accueil lien page pension

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -116,12 +116,11 @@
               de leurs propriétaires par exemple).</li>
           </ul>
           <div class="color-peche-foncee text-center mt-3">
-            <div class="color-turquoise-foncee"> Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement 
+            Si vous souhaitez faire garder votre chat dans un endroit <b>spécialement 
               conçu pour les animaux</b>, par une personne <b>qualifiée</b> (ACACED), et où il aura tout un tas 
-              de compagnie, rendez-vous dans la rubrique <b>Pension pour chats</b> !</div>
-            (Cette rubrique étant en création, vous pouvez nous <span class="typo-link"
-            routerLink="/contact">contacter</span> directement 
-            pour que l'on vous transmette toutes les informations)</div>
+              de compagnie, rendez-vous dans la rubrique <span class="typo-link" 
+              routerLink="/pension-pour-chats">Pension pour chats</span> !
+            </div>
         </div>
       </div>
     </div>
