--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -131,7 +131,11 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>-Rubrique en cours de rédaction-</div>
+          <div>Qu'est-ce qu'un club JANA (Jeunes Adultes Neuro-Atypiques)?</div>
+          <div>Eh bien, cela dépend de qui le compose !</div>
+          <div class= "color-peche-foncee">Si vous avez envie de partager vos victoires, vos difficultés et vos passions dans un groupe de 
+            futurs amis neuro-atypiques (le tout entouré d'animaux bien sûr), faites un tour sur la page <span class="typo-link" 
+            routerLink="/club-neuro-atypique">Club JANA</span> !</div>
         </div>
       </div>
     </div>
