--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,6 +26,9 @@
       <div [class]="getLinkClass('/pension-pour-chats')" routerLink="/pension-pour-chats">Pension pour chats</div>
     </div>
     <div class="col">
+      <div [class]="getLinkClass('/club-neuro-atypique')" routerLink="/club-neuro-atypique">Club JANA</div>
+    </div>
+    <div class="col">
       <div [class]="getLinkClass('/reservation')" routerLink="/reservation">Réservation</div>
     </div>
     <div class="col">
