--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -94,9 +94,8 @@
         <div class>Nous rappelons qu'aucune interaction n'est obligatoire pour l'animal. S'il veut rester tranquille 
         tout le long de son séjour, ce choix sera évidemment respecté !</div>
 
-        <div class="mt-2">Le local est sécurisé par un système de surveillance, d'alarmes intrusion et incendie automatiquement transmises 
-        aux autorités, les fenêtres ne sont pas accessibles et nous avons construit un SAS de sécurité qui empêche nos boules 
-        de poils d'aller faire un tour dehors lorsque nous ouvrons la porte d'entrée.  
+        <div class="mt-2">Le local est sécurisé par un système de surveillance anti-intrusion et anti-incendie. Nous avons également 
+            construit un SAS de sécurité qui empêche nos boules de poils d'aller faire un tour dehors lorsque nous ouvrons la porte d'entrée.  
         
         <div class="color-peche-foncee mt-5">4. TARIFICATION :</div>
         
