gras + lien parrainage

--- a/src/app/club-neuro-atypique/club-neuro-atypique.component.html
+++ b/src/app/club-neuro-atypique/club-neuro-atypique.component.html
@@ -3,16 +3,16 @@
       <div><b>Le club Jeunes Adultes Neuro-Atypiques</b></div>
     </div>
     <div class="color-turquoise-foncee text-center">
-      <div class="mt-4">Le concept : se retrouver entre personnes neuro-atypiques pour partager un maximum.</div>
-          <div>Vous voulez intégrer un groupe sympa qui se réunit pour jouer à vos jeux de société 
+      <div class="mt-4"><b>Le concept</b> : se retrouver entre personnes <b>neuro-atypiques</b> pour <b>partager</b> un maximum.</div>
+          <div>Vous voulez <b>intégrer</b> un groupe sympa qui se réunit pour jouer à vos jeux de société 
               préférés ?</div>
-          <div>Discuter de vos victoires, vos échecs, vos ambitions ? </div>
-          <div>Rencontrer des personnes qui vivent les mêmes difficultés ?</div>
-          <div>Partager vos passions et interêts particuliers ?</div>
-          <div>Tout ça à moindre coût (5 euros par personne), en étant entourés d'animaux et 
-              en ayant accès à la salle sensorielle ?</div>
+          <div><b>Discuter</b> de vos victoires, vos échecs, vos ambitions ? </div>
+          <div><b>Rencontrer</b> des personnes qui vivent les mêmes difficultés ?</div>
+          <div><b>Partager</b> vos passions et interêts particuliers ?</div>
+          <div>Tout ça à <b>moindre coût</b> (5 euros par personne), en étant entourés d'<b>animaux</b> et 
+              en ayant accès à la <b>salle sensorielle</b> ?</div>
 
-        <div class= "mt-4">-> Le club JANA est fait pour vous !</div>
+        <div class= "mt-4">-> Le <b>club JANA</b> est fait pour vous !</div>
 
       <div class="color-peche-foncee mt-4">Il suffit de nous <span class="typo-link"
         routerLink="/contact">envoyer un mail</span> nous précisant 
