--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -55,7 +55,10 @@
         soit l'un de nos <b>permanents</b>, soit l'un de nos <b>accueils</b> (en attendant qu'il 
         trouve une famille pour la vie) !
         <div>Pour <b>3 euros</b> par mois, vous recevrez ainsi des <b>photos</b> et <b>vidéos</b> de votre 
-          petit protégé.</div></div>
+          petit protégé.</div>
+        <div class="color-peche-foncee">Si ça vous dit, <span class="typo-link"
+          routerLink="/contact">contactez nous</span> !</div>
+        </div>
       </div>
     </div>
   </div>
