--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div class="text-big">
   <div class="color-turquoise-foncee text-center mt-5">
     <div>
-      Pour la pension pour chats ou toute demande d'informations, laissez nous un message au
+      Pour la pension pour chats, le club JANA ou toute demande d'informations, laissez nous un message au
       <span class="color-peche-foncee text-center"> 06.29.41.01.36</span>
     </div>
   </div>
