enfants, photos, 5 euros/h, moitié prix, typo

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -36,7 +36,7 @@
             sans rester pendant la séance, et profiter ainsi d'une <b>heure de libre</b> !
           </div>
           <div>La <b>médiation animale</b> (ou <b>zoothérapie</b>) et la stimulation <b>sensorielle</b> apportent un
-            réel <b>mieux être</b> à leurs bénéficiaires. Si vous voulez tester une <b>séance gratuite</b>, vous êtes
+            réel <b>mieux être</b> à leurs bénéficiaires. Si vous voulez tester une <b>séance à moitié prix</b>, vous êtes
             les bienvenus !
           </div>
           <div class="mt-3 color-peche-foncee">
