--- a/src/app/club-neuro-atypique/club-neuro-atypique.component.html
+++ b/src/app/club-neuro-atypique/club-neuro-atypique.component.html
@@ -9,7 +9,7 @@
           <div><b>Discuter</b> de vos victoires, vos échecs, vos ambitions ? </div>
           <div><b>Rencontrer</b> des personnes qui vivent les mêmes difficultés ?</div>
           <div><b>Partager</b> vos passions et interêts particuliers ?</div>
-          <div>Tout ça à <b>moindre coût</b> (5 euros par personne), en étant entourés d'<b>animaux</b> et 
+          <div>Tout ça à <b>moindre coût</b> (5 euros par heure), en étant entourés d'<b>animaux</b> et 
               en ayant accès à la <b>salle sensorielle</b> ?</div>
 
         <div class= "mt-4">-> Le <b>club JANA</b> est fait pour vous !</div>
