--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -46,7 +46,7 @@
         chat daté de moins de 2 semaines (nous sommes conscients que cette condition est contraignante. Cependant 
         cet examen étant très court, de nombreux vétérinaires acceptent de vous placer entre deux rendez-vous). 
         <div>Il est impératif de nous prévenir si le chat a pu être exposé à une maladie contagieuse 
-        entre l'examen vétérinire et la pension.</div>
+        entre l'examen vétérinaire et la pension.</div>
         <div>Les chats malades (attestés non contagieux) sont admis à condition d'être munis d’une ordonnance du traitement 
         à suivre ainsi que du traitement pour la durée du séjour.</div>
 
