--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -29,13 +29,13 @@
         <div class="row">
           <div class="col">
             <mat-form-field class="w-100">
-              <mat-label>Nom accompagnant</mat-label>
+              <mat-label>Nom accompagnant (ou écrire "pas d'accompagnant")</mat-label>
               <input matInput [(ngModel)]="formulaireDto.nomAidant" name="nomAidant" required>
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field class="w-100">
-              <mat-label>Prénom accompagnant</mat-label>
+              <mat-label>Prénom accompagnant (ou écrire "pas d'accompagnant")</mat-label>
               <input matInput [(ngModel)]="formulaireDto.prenomAidant" name="prenomAidant" required>
             </mat-form-field>
           </div>
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col">
             <mat-form-field class="w-100">
-              <mat-label>Téléphone accompagnant</mat-label>
+              <mat-label>Téléphone</mat-label>
               <input matInput [(ngModel)]="formulaireDto.telAidant" type="tel" name="telAidant"
                      pattern="^(0|\+33)[1-9]([-. ]?[0-9]{2}){4}$" required #tel="ngModel">
               <mat-error *ngIf="formulaireDto.telAidant != null && tel.invalid">Téléphone invalide</mat-error>
@@ -52,7 +52,7 @@
           </div>
           <div class="col">
             <mat-form-field class="w-100">
-              <mat-label>E-mail accompagnant</mat-label>
+              <mat-label>E-mail</mat-label>
               <input matInput [(ngModel)]="formulaireDto.mailAidant" type="email" name="mailAidant" required
                      #email="ngModel" email>
               <mat-error *ngIf="formulaireDto.mailAidant != null && email.invalid">E-mail invalide</mat-error>
@@ -74,7 +74,7 @@
 
         <div class="row">
           <div class="col">
-            <label>Nombre d'enfants :</label>
+            <label>Nombre de visiteurs hors accompagnant :</label>
             <mat-radio-group [(ngModel)]="formulaireDto.nbVisiteur" name="nbVisiteur" required
                              [disabled]="formulaireDto.seanceIndividuelle || seance.dispo !== 'empty'">
               <mat-radio-button [value]="1">1</mat-radio-button>
@@ -86,13 +86,13 @@
         <div class="row">
           <div class="col">
             <mat-form-field class="w-100">
-              <mat-label>Prénom enfant {{ formulaireDto.nbVisiteur === 2 ? '1' : '' }}</mat-label>
+              <mat-label>Prénom visiteur {{ formulaireDto.nbVisiteur === 2 ? '1' : '' }}</mat-label>
               <input matInput [(ngModel)]="formulaireDto.prenomVisiteur1" name="prenomVisiteur1" required>
             </mat-form-field>
           </div>
           <div class="col" *ngIf="formulaireDto.nbVisiteur === 2">
             <mat-form-field class="w-100">
-              <mat-label>Prénom enfant 2</mat-label>
+              <mat-label>Prénom visiteur 2</mat-label>
               <input matInput [(ngModel)]="formulaireDto.prenomVisiteur2" name="prenomVisiteur2" required>
             </mat-form-field>
           </div>
@@ -100,11 +100,11 @@
 
         <div class="row">
           <div class="col">
-            <label>L'accompagnant restera pendant la séance (conseillé si le visiteur accompagné est adulte) :</label>
-            <mat-radio-group [(ngModel)]="formulaireDto.accompagnementVisiteur" name="accompagnementVisiteur" required [disabled]="typeSeance === 'cours'">
+            <label>L'accompagnant restera-t-il pendant la séance ? (si pas d'accompagnant, cochez n'importe quelle case)</label>
+            <div><mat-radio-group [(ngModel)]="formulaireDto.accompagnementVisiteur" name="accompagnementVisiteur" required [disabled]="typeSeance === 'cours'">
               <mat-radio-button [value]="true">Oui</mat-radio-button>
               <mat-radio-button [value]="false">Non</mat-radio-button>
-            </mat-radio-group>
+            </mat-radio-group></div>
           </div>
         </div>
 
@@ -122,7 +122,9 @@
         <div class="row justify-content-center">
           <mat-card class="col-10 mb-3 text-center">
             <p>{{ getPrice() }} euros TTC (règlement sur place)</p>
-            <p>Rappel : la première séance <u>d'une heure</u> de médiation animale est gratuite !</p>
+            <p>Rappel : la première séance <u>d'une heure</u> de médiation animale est à moitié prix !</p>
+            <p>(avec la crise sanitaire, il ne nous est plus possible de proposer la première séance 
+              totalement gratuite...)</p>
           </mat-card>
         </div>
 
