--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -27,8 +27,8 @@
         </div>
 
         <div class="row">
-          <div>(Si vous réservez pour vous-même et ne serez pas accompagné d'un aidant, notez juste 
-            "pas d'accompagnant" dans les cases Nom et Prénom accompagnant)</div>
+          <div><i><b>Remarque</b> : si vous réservez pour vous-même et ne serez pas accompagné d'un aidant, notez juste 
+            "pas d'accompagnant" dans les cases "Nom accompagnant" et "Prénom accompagnant".</i></div>
           <div class="col">
             <mat-form-field class="w-100">
               <mat-label>Nom accompagnant</mat-label>
