--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -1,7 +1,7 @@
 <div class="text-big">
   <div class="color-turquoise-foncee text-center mt-5">
     <div>Si Séréni'chat est payant, c'est pour nous aider à louer notre <b>local</b> et à fournir <b>nourriture</b>, <b>litière</b> et <b>soins vétérinaires</b> à nos
-      protégés.
+      petits protégés.
     </div>
   </div>
   <div class="color-peche-foncee text-center">
