--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,3 +1,7 @@
+<div class="pb-4 pt-4 color-peche-foncee text-big text-center"> <b>IMPORTANT : Malheureusement, Séréni'chat 
+  doit fermer suite aux retombées économiques de 2020... Merci à ceux qui ont cru en nous :) </b>
+</div>
+
 <div>
   <div class="row justify-content-center pt-4 pb-4">
     <div class="diaporama text-center">
@@ -62,12 +66,6 @@
               <b>moment de répit</b>
             </li>
           </ul>
-          <div class="color-peche-foncee text-center mt-3">
-            <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">Réservation</span> !</div>
-            <div>Vous voulez réserver pour une personne non représentée ci-dessus ? <span
-            class="typo-link"
-            routerLink="/contact">Contactez-nous</span> afin de déterminer si c'est possible !</div>
-          </div>
         </div>
       </div>
     </div>
@@ -94,10 +92,6 @@
               <li><b>Bien être animal</b>, <b>comment s'occuper d'animaux domestiques</b>.
               </li>
             </ul>
-          <div class="color-peche-foncee text-center mt-3">
-              <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" 
-                routerLink="/reservation">Réservation</span> !</div>
-          </div>
         </div>
       </div>
     </div>
