--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -1,3 +1,7 @@
+<div class="pb-4 pt-4 color-peche-foncee text-big text-center"> <b>IMPORTANT : Malheureusement, Séréni'chat 
+  doit fermer suite aux retombées économiques de 2020... Merci à ceux qui ont cru en nous :) </b>
+</div>
+
 <div>
   <div class="row mt-5">
     <div class="col pb-3">
