--- a/src/app/club-neuro-atypique/club-neuro-atypique.component.html
+++ b/src/app/club-neuro-atypique/club-neuro-atypique.component.html
@@ -1,3 +1,7 @@
+<div class="pb-4 pt-4 color-peche-foncee text-big text-center"> <b>IMPORTANT : Malheureusement, Séréni'chat 
+  doit fermer suite aux retombées économiques de 2020... Merci à ceux qui ont cru en nous :) </b>
+</div>
+
 <div class="text-big">
     <div class="color-peche-foncee text-center mt-5">
       <div><b>Le club Jeunes Adultes Neuro-Atypiques</b></div>
