--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -1,4 +1,7 @@
-
+<div class="pb-4 pt-4 color-peche-foncee text-big text-center"> <b>IMPORTANT : Malheureusement, Séréni'chat 
+    doit fermer suite aux retombées économiques de 2020... Merci à ceux qui ont cru en nous :) </b>
+  </div>
+  
 <div class="color-turquoise-tres-foncee mt-3">
     
     <div class="color-turquoise-foncee">
